[package]
# foo comment
name = "minigrep"
version = "0.1.0"
authors = ["Dimitri Merejkowsky <dimitri.merejkowsky@tanker.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# other foo comment
[dependencies]
# again with Foo comment
